--- a/game/game.csproj
+++ b/game/game.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="SystemModule\SystemModule.csproj">
+    <ProjectReference Include="..\SystemModule\SystemModule.csproj">
       <Project>{3861d59c-46ae-485f-b476-2e35b208b9d2}</Project>
       <Name>SystemModule</Name>
     </ProjectReference>
